add unit test, fix random
